# coding-train

./: .gitignore  CMakeLists.txt  README.md
101_symtree/: solution.h  tests.cpp
114_binarytolinkedlist/: CMakeLists.txt
114_binarytolinkedlist/114_binarytolinkedlist/: README.md
114_binarytolinkedlist/114_binarytolinkedlist (2)/: CMakeLists.txt
114_binarytolinkedlist/114_binarytolinkedlist (2)/114_binarytolinkedlist/: solution.h
13_roman/: CMakeLists.txt
2_addtwo/: solution.h  tests.cpp
3190_minopsdivbythree/: CMakeLists.txt
37_sudoku/: CMakeLists.txt  backtracking_solution.h
8_atoi/: solution.h  tests.cpp
experiments/: README.md
experiments/dag_salesman/: a.out  salesman.cpp
experiments/ecosystem_sim/: a.out  ecosystem.cpp
experiments/hexstreams/: a.out  learning_stream_manipulators.cpp
experiments/painthook/: README.md  dllmain.cpp  injector.cpp
experiments/poe_log_reader/: a.out  reader.cpp
experiments/rAVen/: Makefile  README.md  main.c
leetcode/: CMakeLists.txt  README.md
leetcode/101_symtree/: CMakeLists.txt  solution.h  tests.cpp
leetcode/114_binarytolinkedlist/: solution.h  tests.cpp
leetcode/139_wordbreak/: solution.h
leetcode/13_roman/: solution.h  tests.cpp
leetcode/17_lettercombosphonenumber/: solution.h
leetcode/2_addtwo/: CMakeLists.txt
leetcode/3190_minopsdivbythree/: solution.h  tests.cpp
leetcode/37_sudoku/: solution.h  tests.cpp
leetcode/453_minmovesequal/: CMakeLists.txt  README.md  solution.h  tests.cpp
leetcode/52_uniquepaths/: solution.h
leetcode/64_minpathsum/: CMakeLists.txt  solution.h  tests.cpp
leetcode/6_zigzagconvert/: solution.h
leetcode/74_searchmatrix/: solution.h
leetcode/79_wordsearch/: dfs_solution.h  solution.h
leetcode/8_atoi/: CMakeLists.txt  solution.h
leetcode/92_reversebetween/: solution.h
leetcode/97_interleavedstring/: solution.h
leetcode/dynamic_array/: CMakeLists.txt  solution.h  tests.cpp
protohackers/: README.md  main.cpp  platform_socket.h  test_client.cpp
